--- a/backend/package.json
+++ b/backend/package.json
@@ -3,13 +3,30 @@
   "version": "1.0.0",
   "description": "Diamond coffee company server",
   "keywords": [
-    "lul-prof"
+    "lul-prof",
+    "Daimond-Cofee-Company-Limited"
   ],
   "license": "ISC",
   "author": "lul-prof",
-  "type": "commonjs",
+  "type": "module",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "server": "nodemon server.js"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11"
+  },
+  "dependencies": {
+    "bcryptjs": "^3.0.3",
+    "cloudinary": "^2.9.0",
+    "cors": "^2.8.6",
+    "dotenv": "^17.3.1",
+    "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^9.2.1",
+    "multer": "^2.0.2",
+    "nodemailer": "^8.0.1"
   }
 }
